# Multi-Database

./: .env.example  .gitignore  README.md  check.py  context.py  deposit.py  get_account.py  main.py  pyproject.toml  recover.py  withdraw.py
application/: check_use_case.py  deposit_use_case.py  get_account_use_case.py  recover_use_case.py  withdraw_use_case.py
data_access/: account_repo.py  check_repo.py  database_connection_provider.py  ledger_repo.py  transaction.py  transaction_log_repo.py  transaction_manager.py
data_access/coordinator/: recover_coordinator.py  transaction_log.py  two_phase_commit_coordinator.py
database/: docker-compose.yml  schema_ledger_db.sql
doc/: design.md
entity/: __init__.py  account.py  check_responce.py  ledger_entry.py  transaction_log_entry.py
